[tool.poetry]
name = "cache"
version = "0.1.0"
description = ""
authors = ["Eric Jolibois <em.jolibois@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
hypercorn = {extras = ["uvloop"], version = "^0.13.2"}
aiocache = "^0.11.1"
ujson = "^5.1.0"
aioredis = "1.3.1"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
